--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+# decafandmac/future-imperfect
+
 title: Decaf and Mac
 description: > # this means to ignore newlines until "baseurl:"
   Decaf and Mac's Blog<br>
